[package]
name = "eui48"
version = "1.1.0"
authors = ["Andrew Baumhauer <andy@baumhauer.us>",
           "<rlcomstock3@github.com>",
           "Michal 'vorner' Vaner <vorner+github@vorner.cz>",
	   "Stan Drozd <drozdziak1@gmail.com>" ]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/abaumhauer/eui48"
homepage = "https://github.com/abaumhauer/eui48"
keywords = ["EUI-48", "MAC", "MAC-48", "networking", "MACADDR"]
categories = ["network-programming", "parser-implementations"]
description = """
A library to generate and parse IEEE EUI-48 and EUI-64, also known as MAC-48 media access
control addresses. The IEEE claims trademarks on the names EUI-48 and EUI-64, in which EUI is an
abbreviation for Extended Unique Identifier.
"""
exclude = [
  ".gitignore",
    ".travis.yml",
    ".gitlab-ci.yml",
    ".travis/*"
]

[dependencies]
regex = { version = "1.3.9", optional = false }
rustc-serialize = { version = "0.3.24", optional = true }
serde = { version = "1.0.114", optional = true }
serde_json = { version = "1.0.56", optional = true }

[dev-dependencies]
bincode = "1.3.1"

[badges]
travis-ci = { repository = "abaumhauer/eui48", branch = "master" }
codecov = { repository = "abaumhauer/eui48", branch = "master", service = "github" }
gitlab = { repository = "abaumhauer/eui48", branch = "master" }
appveyor = { repository = "abaumhauer/eui48", branch = "master", service = "github" }

[features]
default = []
disp_hexstring = []
serde_bytes = ["serde"]
rustc_serialize = ["rustc-serialize"]
